# FiveHobosProrail

./: .gitignore  README.md  test wouter.txt
DetectText/: CMakeLists.txt  FeaturesMain.cpp  README.md  TextDetection.cpp  TextDetection.h
Hackathon/: configuration.yml  datasource.py  frame_extractor.py  linktype.py  run.py  run_py.txt
Hackathon/modules/C++/: CMakeLists.txt  DummyNumberLocaliser.cpp  DummyNumberRecogniser.cpp  DummyRegionMatcher.cpp  DummyWagonSegmenter.cpp  NumberRecogniser.cpp  dumpJson.cpp  dumpJson.hpp
Hackathon/modules/Java/: DummyNumberLocaliser.java  DummyNumberRecogniser.java  DummyRegionMatcher.java  DummyWagonSegmenter.java
Hackathon/modules/Python/: dummyNumberLocaliser.py  dummyNumberRecogniser.py  dummyRegionMatcher.py  dummyWagonSegmenter.py  edgeFilterWagon.py  regionMatcher.py  visualiseNumberLocaliser.py  visualiseWagonSegmenter.py  wagonSegmenter.py
Hackathon/tf_files/: retrained_labels.txt
